# roach-roulette

./: LICENSE  README.md
.github/workflows/: main.yml
client/: .gitignore  package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.tsx
client/src/components/: Draggable.tsx  Droppable.tsx  GameBoard.tsx  LandingPage.tsx  RoomCreate.tsx  RoomJoin.tsx
client/src/styles/: GameBoard.css  LandingPage.css
client/src/utils/: useWebSocket.ts
server/: Cargo.toml
server/.cargo/: config.tml
server/src/: game.rs  lib.rs  lobby.rs  main.rs  messages.rs  routes.rs  start_connection.rs  utils.rs  ws.rs
server/tests/: health_check.rs
