[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.12.0", features = ["full"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"


