[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.12.0", features = ["full"] }
rand = "0.8.5"
actix = "0.13.0"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
actix-web-actors="4.2.0"
actix-rt = "2.8.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"


